--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -81,7 +81,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Mediateca-POO-fase1
-main.class=
+main.class=Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
