--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Mediateca-POO-fase1
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout-RELEASE230.jar=C:\\Users\\marlo\\Downloads\\java\\AbsoluteLayout-RELEASE230.jar
 file.reference.log4j-1.2-api-2.24.3.jar=C:\\Users\\marlo\\Downloads\\java\\log4j-1.2-api-2.24.3.jar
 file.reference.log4j-api-2.24.3.jar=C:\\Users\\marlo\\Downloads\\java\\log4j-api-2.24.3.jar
 file.reference.log4j-core-2.24.3.jar=C:\\Users\\marlo\\Downloads\\java\\log4j-core-2.24.3.jar
@@ -45,7 +46,8 @@ javac.classpath=\
     ${file.reference.log4j-1.2-api-2.24.3.jar}:\
     ${file.reference.log4j-api-2.24.3.jar}:\
     ${file.reference.log4j-core-2.24.3.jar}:\
-    ${file.reference.mysql-connector-j-9.3.0.jar}
+    ${file.reference.mysql-connector-j-9.3.0.jar}:\
+    ${file.reference.AbsoluteLayout-RELEASE230.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
